# aoc-2024

./: .gitignore
python/: .gitignore  pyproject.toml  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py
