[project]
name = "aoc-2024"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-aoc>=1.23.4",
    "ruff>=0.8.1",
]

[tool.pytest.ini_options]
aoc_year = 2024

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D", # don't require documentation
    "PLR2004", # ignore magic values
    "S101", # allow assert in tests
]